--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,5 +7,7 @@ djangorestframework-simplejwt==4.6.0
 pycodestyle==2.7.0
 PyJWT==2.1.0
 pytz==2021.1
+PyYAML==5.4.1
 sqlparse==0.4.1
 toml==0.10.2
+uritemplate==3.0.1
