--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,23 @@
 asgiref==3.3.4
 autopep8==1.5.7
+certifi==2020.12.5
+chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.2.2
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
+idna==2.10
+itypes==1.2.0
+Jinja2==3.0.0
+MarkupSafe==2.0.0
 pycodestyle==2.7.0
 PyJWT==2.1.0
 pytz==2021.1
 PyYAML==5.4.1
+requests==2.25.1
 sqlparse==0.4.1
 toml==0.10.2
 uritemplate==3.0.1
+urllib3==1.26.4
